Bug 1311707 - dom-private-storage2-changed notification, r=janv